# basecli

./: README.md  pyproject.toml  requirements.txt
basecli/: __main__.py  config.py  main.py  validator.py
