[tool.poetry]
name = "basecli"
version = "0.1.0"
description = "CLI for Deta Base"
authors = ["'Ayush <'mini@minidev.me'>"]
readme = "README.md"
keywords = ['deta', 'cli', 'base']
packages = [
    { include = "basecli" },
    { include = "basecli/**/*.py" },
]


[tool.poetry.scripts]
basecli = "basecli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}
requests = "^2.28.1"
deta = "^1.1.0"
